feat(api-java): add JVM arguments for native access and update application properties